--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -641,10 +641,10 @@ szám (%s) érvénytelen.
   <string name="RegistrationActivity_country_code_description">Országkód</string>
   <string name="RegistrationActivity_call">Hívás</string>
   <!--RevealableMessageView-->
-  <string name="RevealableMessageView_photo">Kép</string>
-  <string name="RevealableMessageView_video">Videó</string>
+  <string name="RevealableMessageView_view_photo">Kép</string>
+  <string name="RevealableMessageView_view_video">Videó</string>
   <string name="RevealableMessageView_viewed">Megtekintve</string>
-  <string name="RevealableMessageView_outgoing_media">Média</string>
+  <string name="RevealableMessageView_media">Média</string>
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">Nem sikerült elmenteni a kép változásait</string>
   <!--Search-->
@@ -706,8 +706,8 @@ Kulcs-csere üzenet érkezett érvénytelen protokoll verzióhoz.
   <string name="ThreadRecord_missed_call">Nem fogadott hívás</string>
   <string name="ThreadRecord_media_message">Média üzenet</string>
   <string name="ThreadRecord_sticker">Matrica</string>
-  <string name="ThreadRecord_disappearing_photo">Eltűnő fotó</string>
-  <string name="ThreadRecord_disappearing_video">Eltűnő videó</string>
+  <string name="ThreadRecord_view_once_photo">Eltűnő fotó</string>
+  <string name="ThreadRecord_view_once_video">Eltűnő videó</string>
   <string name="ThreadRecord_s_is_on_signal">%s a Signal-on van!</string>
   <string name="ThreadRecord_disappearing_messages_disabled">Eltűnő üzenetek letiltva</string>
   <string name="ThreadRecord_disappearing_message_time_updated_to_s">Eltűnő üzenet ideje beállítva erre: %s</string>
@@ -798,8 +798,8 @@ Kulcs-csere üzenet érkezett érvénytelen protokoll verzióhoz.
   <string name="MessageNotifier_mark_read">Olvasottnak jelöl</string>
   <string name="MessageNotifier_media_message">Médiaüzenet</string>
   <string name="MessageNotifier_sticker">Matrica</string>
-  <string name="MessageNotifier_disappearing_photo">Eltűnő fotó</string>
-  <string name="MessageNotifier_disappearing_video">Eltűnő videó</string>
+  <string name="MessageNotifier_view_once_photo">Eltűnő fotó</string>
+  <string name="MessageNotifier_view_once_video">Eltűnő videó</string>
   <string name="MessageNotifier_reply">Válasz</string>
   <string name="MessageNotifier_signal_message">Signal üzenet</string>
   <string name="MessageNotifier_unsecured_sms">Titkosítatlan SMS</string>
@@ -946,7 +946,7 @@ Kulcs-csere üzenet érkezett érvénytelen protokoll verzióhoz.
   <string name="QuoteView_audio">Hang</string>
   <string name="QuoteView_video">Videó</string>
   <string name="QuoteView_photo">Fotó</string>
-  <string name="QuoteView_media">Médiaüzenet</string>
+  <string name="QuoteView_view_once_media">Médiaüzenet</string>
   <string name="QuoteView_sticker">Matrica</string>
   <string name="QuoteView_document">Dokumentum</string>
   <string name="QuoteView_you">Te</string>
