--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -676,10 +676,10 @@
   <string name="RegistrationActivity_country_code_description">Код страны</string>
   <string name="RegistrationActivity_call">Позвонить</string>
   <!--RevealableMessageView-->
-  <string name="RevealableMessageView_photo">Фото</string>
-  <string name="RevealableMessageView_video">Видео</string>
+  <string name="RevealableMessageView_view_photo">Фото</string>
+  <string name="RevealableMessageView_view_video">Видео</string>
   <string name="RevealableMessageView_viewed">Просмотрено</string>
-  <string name="RevealableMessageView_outgoing_media">Медиа</string>
+  <string name="RevealableMessageView_media">Медиа</string>
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">Не удалось сохранить изменения изображения</string>
   <!--Search-->
@@ -741,8 +741,8 @@
   <string name="ThreadRecord_missed_call">Пропущен звонок</string>
   <string name="ThreadRecord_media_message">Медиа-сообщение</string>
   <string name="ThreadRecord_sticker">Стикер</string>
-  <string name="ThreadRecord_disappearing_photo">Исчезающая фотография</string>
-  <string name="ThreadRecord_disappearing_video">Исчезающее видео</string>
+  <string name="ThreadRecord_view_once_photo">Исчезающая фотография</string>
+  <string name="ThreadRecord_view_once_video">Исчезающее видео</string>
   <string name="ThreadRecord_s_is_on_signal">%s теперь в Signal!</string>
   <string name="ThreadRecord_disappearing_messages_disabled">Исчезающие сообщения отключены</string>
   <string name="ThreadRecord_disappearing_message_time_updated_to_s">Время исчезновения сообщений – %s</string>
@@ -833,8 +833,8 @@
   <string name="MessageNotifier_mark_read">Прочитано</string>
   <string name="MessageNotifier_media_message">Медиа-сообщение</string>
   <string name="MessageNotifier_sticker">Стикер</string>
-  <string name="MessageNotifier_disappearing_photo">Исчезающая фотография</string>
-  <string name="MessageNotifier_disappearing_video">Исчезающее видео</string>
+  <string name="MessageNotifier_view_once_photo">Исчезающая фотография</string>
+  <string name="MessageNotifier_view_once_video">Исчезающее видео</string>
   <string name="MessageNotifier_reply">Ответить</string>
   <string name="MessageNotifier_signal_message">Сообщение Signal</string>
   <string name="MessageNotifier_unsecured_sms">Незащищенное SMS</string>
@@ -982,7 +982,7 @@
   <string name="QuoteView_audio">Аудио</string>
   <string name="QuoteView_video">Видео</string>
   <string name="QuoteView_photo">Фото</string>
-  <string name="QuoteView_media">Медиа-сообщение</string>
+  <string name="QuoteView_view_once_media">Медиа-сообщение</string>
   <string name="QuoteView_sticker">Стикер</string>
   <string name="QuoteView_document">Документ</string>
   <string name="QuoteView_you">Вы</string>
